@startuml

title __DAO's Class Diagram__\n

  namespace zuke.com.qxapp {
    namespace DAO {
      class zuke.com.qxapp.DAO.userDao {
          + add()
          + delete()
          + query()
          + update()
          + userDao()
      }
    }
  }
  

  namespace zuke.com.qxapp {
    namespace DAO {
      class zuke.com.qxapp.DAO.userSQLiteOpenHelper {
          - db : SQLiteDatabase
          + add()
          + delete()
          + onCreate()
          + onUpgrade()
          + updata()
          + userSQLiteOpenHelper()
      }
    }
  }
  

  zuke.com.qxapp.DAO.userDao o-- zuke.com.qxapp.DAO.userSQLiteOpenHelper : helper
  zuke.com.qxapp.DAO.userSQLiteOpenHelper -up-|> android.database.sqlite.SQLiteOpenHelper


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
